# bidgely

./: .gitignore  .pre-commit-config.yaml  README.md  bidgely-openapi.yaml  pyproject.toml
.github/: FUNDING.yaml  FUNDING.yml
.github/workflows/: publish.yaml  validate.yaml
bidgely/: __init__.py  bidgely.py  exceptions.py
bidgely/utilities/: aws_srp.py  base.py  hydroottawa.py
examples/: demo.py
src/: __init__.py  bidgely.py
src/utilities/: __init__.py  base.py  hydroottawa.py
